Closed Bug 1764394 Opened 3 years ago Closed 3 years ago

Crash in [@ (anonymous namespace)::setup_wasapi_stream]

Categories

(Core :: Audio/Video: cubeb, defect, P2)

Firefox 100
All
Windows
defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- fixed
firefox101 --- fixed

People

(Reporter: aryx, Assigned: kinetik)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

49 crashes from 41 installations, all on Windows, crash reports for Firefox 100.0b<number> and once 101.0a1

Crash report: https://crash-stats.mozilla.org/report/index/f7c5fe20-f82f-42d6-a4cd-6df480220412

Reason: EXCEPTION_BREAKPOINT

Top 10 frames of crashing thread:

0 xul.dll `anonymous namespace'::setup_wasapi_stream media/libcubeb/src/cubeb_wasapi.cpp:2448
1 xul.dll `anonymous namespace'::wasapi_stream_init media/libcubeb/src/cubeb_wasapi.cpp:2737
2 xul.dll cubeb_stream_init media/libcubeb/src/cubeb.c:377
3 xul.dll cubeb_core::context::ContextRef::stream_init third_party/rust/cubeb-core/src/context.rs:104
4 xul.dll audioipc2::ipccore::impl$5::process_inbound<audioipc2::rpccore::ServerHandler<audioipc2_server::server::CubebServer> > third_party/rust/audioipc2/src/ipccore.rs:625
5 xul.dll audioipc2::ipccore::EventLoop::poll third_party/rust/audioipc2/src/ipccore.rs:223
6 xul.dll std::sys_common::backtrace::__rust_begin_short_backtrace<audioipc2::ipccore::impl$7::new::closure$0, enum$<core::result::Result<tuple$<>, std::io::error::Error>, 0, 3, Err> > ../9d1b2106e23b1abd32fce1f17267604a5102f57a/library/std/src/sys_common/backtrace.rs:123
7 xul.dll core::ops::function::FnOnce::call_once<std::thread::impl$0::spawn_unchecked::closure$1, tuple$<> > ../9d1b2106e23b1abd32fce1f17267604a5102f57a/library/core/src/ops/function.rs:227
8 xul.dll std::sys::windows::thread::impl$0::new::thread_start ../9d1b2106e23b1abd32fce1f17267604a5102f57a//library/std/src/sys/windows/thread.rs:58
9 None @0x000001eea683002e 

We're hitting the device_info.latency_hi > 0 assert added in bug 1762041 (https://github.com/mozilla/cubeb/pull/695).

Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Priority: -- → P2
Regressed by: 1762041
Attached file GitHub Pull Request
Has Regression Range: --- → yes
Depends on: 1764574
Keywords: regression
Version: unspecified → Firefox 100

Fixed by cubeb uplift in 1764574.

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Attachment #9272574 - Attachment description: WIP: Bug 1764394 - Backport WASAPI assert fix to beta. → Bug 1764394 - Backport WASAPI assert fix to beta.

Comment on attachment 9272574 [details]
Bug 1764394 - Backport WASAPI assert fix to beta.

Beta/Release Uplift Approval Request

  • User impact if declined: possible crash due when using Bluetooth devices
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): low risk, effectively reverts to same behaviour as release
  • String changes made/needed: none
Attachment #9272574 - Flags: approval-mozilla-beta?

:kinetik the status of the patch nominated for beta but it looks like it still has changes planned. As a reminder this week is the last week of betas. What is your plan for landing this patch?

Flags: needinfo?(kinetik)

Comment on attachment 9272574 [details]
Bug 1764394 - Backport WASAPI assert fix to beta.

Approved for 100.0b8

Attachment #9272574 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

(In reply to Dianna Smith [:diannaS] from comment #6)

:kinetik the status of the patch nominated for beta but it looks like it still has changes planned. As a reminder this week is the last week of betas. What is your plan for landing this patch?

A misunderstanding on my part; the patch was complete but I hadn't requested review since it was a rollup of the existing reviewed patch + fixes. Thanks for landing it!

Flags: needinfo?(kinetik)
Target Milestone: --- → 101 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: