Bug 1764394 - Backport WASAPI assert fix to beta. r=padenot,a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D143864